--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".arc.ArcActivity"/>
         <activity android:name=".practice1.Practice1Activity"/>
         <activity android:name=".practice2.PracticeActivity2"/>
+        <activity android:name=".practice3.PracticeActivity3"/>
     </application>
 
 </manifest>
