--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".practice1.Practice1Activity"/>
         <activity android:name=".practice2.PracticeActivity2"/>
         <activity android:name=".practice3.PracticeActivity3"/>
+        <activity android:name=".practice4.PracticeActivity4"/>
     </application>
 
 </manifest>
