--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.orhanobut:logger:2.1.1'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.yanzhenjie:permission:2.0.0-rc3'
 }
