--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fly.viewdemo">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,6 +34,8 @@
         <activity android:name=".practice4.PracticeActivity4"/>
         <activity android:name=".practice5.PracticeActivity5"/>
         <activity android:name=".View.ViewActivity"/>
+        <activity android:name=".visualizer.VisualizerActivity" />
+        <activity android:name=".layoutManager.LayoutManagerActivity" />
     </application>
 
 </manifest>
