--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".View.ViewActivity"/>
         <activity android:name=".visualizer.VisualizerActivity" />
         <activity android:name=".layoutManager.LayoutManagerActivity" />
+        <activity android:name=".circle.CircleActivity"/>
     </application>
 
 </manifest>
